clusters/home-workers/ingress-nginx/ob-mirror-deis-hephy-pro/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ob-mirror-deis-hephy-pro
  namespace: ingress-nginx
spec:
  ports:
    - name: amb-ingress
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
---
# See gitno-hephy-pro which has the same backend
kind: Endpoints
apiVersion: v1
metadata:
  name: ob-mirror-deis-hephy-pro
  namespace: ingress-nginx
subsets:
- addresses:
  - ip: 10.17.12.204
  ports:
  - port: 80
    name: amb-ingress-http
  - port: 443
    name: amb-ingress
